[metadata]
name = http_proxy
description = A feature-incomplete HTTP proxy, mainly for testing libtorrent
url = https://github.com/AllSeeingEyeTolledEweSew/http_proxy
author = AllSeeingEyeTolledEweSew
author_email = allseeingeyetolledewesew@protonmail.com
license = 0BSD
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
