[metadata]
name = http_proxy
description = A feature-incomplete HTTP proxy, mainly for testing libtorrent
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AllSeeingEyeTolledEweSew/http_proxy
author = AllSeeingEyeTolledEweSew
author_email = allseeingeyetolledewesew@protonmail.com
license = 0BSD
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
python_requires = >=3.6

[mypy]
warn_return_any = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_unreachable = True
warn_unused_configs = True
disallow_any_unimported = True
disallow_untyped_defs = True
disallow_incomplete_defs = True

[flake8]
extend-ignore =
    E203 # https://github.com/psf/black/blob/master/docs/the_black_code_style.md#slices

[tox:tox]
isolated_build = True
envlist = py36,py37,py38,py39

[testenv]
deps =
    safety
    pytest
commands =
    safety check
    pytest
